# cuda_qt

./: .gitignore  CMakeLists.txt  about.ui  cudaImageFuncs.cpp  cudaImageFuncs.cu  cudaImageFuncs.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
